# SideProjects

./: README.md
EMSpinSpeedControl/matlab/: polePlacement.m  processIdentification.sid  workspaceData.mat
EMSpinSpeedControl/matlab/simulink/: model.slx
EMSpinSpeedControl/up-dc-motor-control/: stm32_flash.ld
EMSpinSpeedControl/up-dc-motor-control/Debug/: UP_DCmotorControl.elf  UP_DCmotorControl.list  UP_DCmotorControl.map
EMSpinSpeedControl/up-dc-motor-control/Debug/src/: main.su
EMSpinSpeedControl/up-dc-motor-control/Libraries/CMSIS/Device/ST/STM32F10x/Include/: stm32f10x.h
EMSpinSpeedControl/up-dc-motor-control/Libraries/misc_stm32f103/: stm32f103_misc.c
EMSpinSpeedControl/up-dc-motor-control/src/: main.c  tiny_printf.c
computerVisionShorts/DelaunayTriangulacija/: main.cpp
computerVisionShorts/HoughTransform/: CameraCalib.cpp  HoughTransform.cpp
computerVisionShorts/PlaneSegmentation/src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
computerVisionShorts/SIFTFeatures/: main.cpp
kontrolaPristupaPomocuZnacajkiLica/: main.py
kontrolaPristupaPomocuZnacajkiLica/functions/: GUI.py  cameraHandler.py  faceRecognition.py  folderHandler.py  userDataHandler.py
